# CG-Practical-Assignment

./: .gitignore
Engine/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Group.cpp  Group.h  Light.cpp  Light.h  Model.cpp  Model.h  SistemaSolar.xml  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  boxcone.xml  catmull-rom.cpp  catmull-rom.h  engine.cpp  engine.sln  engine.vcxproj  engine.vcxproj.filters  parser.cpp  parser.h  texture.cpp  texture.h
Engine/exemplos/: SistemaSolar.xml  allModels.xml  box.3d  box.xml  cone.3d  cone.xml  plane.3d  plane.xml  sphere.3d  sphere.xml  teapot.3d
Engine/test/: all.xml  box.xml  boxcone.xml  cone.3d  cone.xml  plane.3d  plane.xml  sphere.3d  sphere.xml
Generator/: .gitignore  CMakeLists.txt  main.cpp
